k8s/15-alloy-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: alloy
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "12345"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: alloy-sa 
      securityContext:
        runAsUser: 0
      containers:
      - name: alloy
        image: grafana/alloy
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        args: ["run", "--server.http.listen-addr=0.0.0.0:12345", "/etc/alloy/config.alloy"]
        readinessProbe:
          httpGet:
            path: /-/ready
            port: 12345
          initialDelaySeconds: 15
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 12345
          initialDelaySeconds: 15
        volumeMounts:
        - name: config
          mountPath: /etc/alloy
        - name: logs
          mountPath: /var/log/pods
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: alloy-config
      - name: logs
        hostPath:
          path: /var/log/pods
