k8s/03-db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-db-service
  namespace: quiz-web-app
spec:
  selector:
    app: quiz-db
  ports:
    - protocol: TCP
      port: 5432
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: quiz-db
  namespace: quiz-web-app
spec:
  serviceName: quiz-db-service
  replicas: 1
  selector:
    matchLabels:
      app: quiz-db
  template:
    metadata:
      labels:
        app: quiz-db
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9187"
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
          name: postgres
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        startupProbe:
          exec:
            command:
            - sh 
            - -c 
            - "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
          initialDelaySeconds: 30
          failureThreshold: 30
          periodSeconds: 10
          timeoutSeconds: 30
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
          periodSeconds: 10
          failureThreshold: 5
          timeoutSeconds: 30
        readinessProbe:
          exec:
            command: 
            - sh
            - -c
            - "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
          periodSeconds: 5
          failureThreshold: 5
          timeoutSeconds: 30
        volumeMounts: 
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
      - name: postgres-exporter
        image: prometheuscommunity/postgres-exporter
        ports:
          - containerPort: 9187
            name: metrics
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
