k8s/04-app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-web-service
spec:
  sessionAffinity: ClientIP
  selector:
    app: quiz-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: flask-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-web-deployment
spec:
  selector:
    matchLabels:
      app: quiz-web
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1       
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: quiz-web
    spec:
      spec:
      containers:
      - name: quiz-web
        image: quiz-web:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          name: flask-port
        startupProbe:
          httpGet:
            path: /health/ready
            port: 5000
          initialDelaySeconds: 10
          failureThreshold: 30  
          periodSeconds: 10
          timeoutSeconds: 30
        livenessProbe:
          httpGet:
            path: /health/live
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 5
        resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
