k8s/07-pgadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-pgadmin-service
  namespace: quiz-web-app
spec:
  selector:
    app: quiz-pgadmin
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5050       
      targetPort: 80    
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: quiz-pgadmin
  namespace: quiz-web-app
spec:
  serviceName: quiz-pgadmin-service
  replicas: 1
  selector:
    matchLabels:
      app: quiz-pgadmin
  template:
    metadata:
      labels:
        app: quiz-pgadmin
    spec:
      securityContext:
        fsGroup: 5050
      containers:
      - name: pgadmin
        image: dpage/pgadmin4
        ports:
        - containerPort: 80
          name: pgadmin
        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        startupProbe:
          httpGet:
            path: /misc/ping
            port: 80
          initialDelaySeconds: 60
          failureThreshold: 20
          periodSeconds: 10
          timeoutSeconds: 5           
        livenessProbe:
          httpGet:
            path: /misc/ping
            port: 80
          periodSeconds: 10
          failureThreshold: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /misc/ping
            port: 80
          periodSeconds: 5
          failureThreshold: 5
          timeoutSeconds: 5

        volumeMounts: 
        - name: pgadmin-persistent-storage
          mountPath: /var/lib/pgadmin
      volumes:
      - name: pgadmin-persistent-storage
        persistentVolumeClaim:
          claimName: pgadmin-pv-claim
