k8s/14-loki-deploymnet.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  selector:
    app: loki
  ports:
    - port: 3100
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: monitoring
spec:
  serviceName: loki
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3100"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: loki
        image: grafana/loki
        imagePullPolicy: IfNotPresent
        args: ["-config.file=/etc/loki/loki.yaml"]
        ports:
          - containerPort: 3100
            name: http-metrics
        startupProbe:
          httpGet:
            path: /ready
            port: http-metrics
          failureThreshold: 20
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /ready
            port: http-metrics
          initialDelaySeconds: 5
          periodSeconds: 20
          failureThreshold: 3
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
          - name: config
            mountPath: /etc/loki
          - name: storage
            mountPath: /loki
      volumes:
        - name: config
          configMap:
            name: loki-config 
        - name: storage
          persistentVolumeClaim:
            claimName: loki-pv-claim
