k8s/19-grafana-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        fsGroup: 472
        runAsUser: 472
      containers:
      - name: grafana
        image: grafana/grafana
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
            name: grafana-http
        startupProbe:
          httpGet:
            path: /api/health
            port: 3000
          failureThreshold: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 20
        resources:
          requests:
            cpu: "100m"      
            memory: "128Mi"  
          limits:
            cpu: "300m"      
            memory: "256Mi" 
        volumeMounts:
          - name: datasource-config
            mountPath: /etc/grafana/provisioning/datasources
          - name: grafana-storage
            mountPath: /var/lib/grafana
      volumes:
        - name: datasource-config
          configMap:
            name: grafana-config
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pv-claim
