k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: quiz.local
    http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: quiz-web-service
             port:
               number: 80
